--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>ST.Thomas college of arts and science-BCA</p>
+            <p>Thiruthangal Nadar College-BCA</p>
             
             
         </div>
